--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h1 span{
     max-width: 60%;
     border-radius: 15px;
     padding: 30px 50px;
-    background: url(/shapes/Group_33094_1.png);
+    background: url(shapes/Group_33094_1.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
